- update logo - wire up "let's talk button"

--- a/src/about_us.html
+++ b/src/about_us.html
@@ -45,7 +45,8 @@
                                 <a href="#">
                                     <span class="sr-only">Peacemakr</span>
                                     <img class="h-8 w-auto sm:h-10"
-                                        src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg">
+                                         src="./images/p_logo.png" >
+<!--                                        src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg">-->
                                 </a>
                                 <div class="-mr-2 flex items-center md:hidden">
                                     <button type="button"
