--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
                                 <a href="#">
                                     <span class="sr-only">Peacemakr</span>
                                     <img class="h-8 w-auto sm:h-10"
-                                        src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg">
+                                         src="./images/p_logo.png" >
+<!--                                        src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg">-->
                                 </a>
                                 <div class="-mr-2 flex items-center md:hidden">
                                     <button type="button"
@@ -168,17 +169,6 @@
                 </div>
             </div>
         </div>
-        <!-- raw HTML omitted -->
-        <!-- <h3 id="secure-data-with-turnkey-solutions">Secure Data, with Turnkey Solutions</h3>
-<p>Peacemakr&rsquo;s Secure Data Platform has integrated with several open-source projects to provide turnkey Data Security solutions, including,</p>
-<ul>
-<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io">The Secure Data Platform</a></li>
-<li><input checked="" disabled="" type="checkbox"><a href="https://medium.com/@danielhuang37/encrypting-all-your-logs-in-2-easy-steps-using-logrotate-and-peacemakr-8ad9cbfe1b4c">Secure Logging Solution</a></li>
-<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io/redis">Secure Redis Solution</a></li>
-<li><input checked="" disabled="" type="checkbox"><a href="https://github.com/peacemakr-io/peacemakr-cli">Secure Data Platform CLI</a></li>
-<li><input disabled="" type="checkbox">Secure S3 Object Solution <em>(coming soon!)</em></li>
-<li><input disabled="" type="checkbox">Secure Apache Spark <em>(coming soon!)</em></li>
-</ul> -->
 
         <div class="bg-white">
             <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
@@ -665,7 +655,7 @@
             </div>
         </div>
 
-        <!-- For Compliance block-->
+        <!-- Compliance block-->
         <div class="bg-gray-50">
             <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
                 <div>
@@ -767,11 +757,7 @@
             </div>
         </div>
 
-        <!-- raw HTML omitted -->
-        <!-- <h3 id="secure-collaborations">Secure Collaborations</h3>
-<p>Securely share data with intended participants seamlessly, even across different organizations. Forget &ldquo;bring-your-own-keys,&rdquo; invite your collaborators to bring-your-own-threat-model (and their keys).</p>
-<hr> -->
-
+        <!-- Secure block -->
         <div class="relative bg-white py-16 sm:py-24 lg:py-32 overflow-hidden">
             <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
                 <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Secure Data</h2>
@@ -786,11 +772,7 @@
             </div>
         </div>
 
-        <!-- raw HTML omitted -->
-        <!-- <h3 id="secure-data-at-scale">Secure Data at Scale</h3>
-<p>Peacemakr scales with you so that you do not waste time supporting and scaling any secure data infrastructure.</p>
-<hr> -->
-
+        <!-- At scale block -->
         <div class="relative bg-gray-50 py-16 sm:py-24 lg:py-32">
             <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
                 <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Secure Data</h2>
@@ -804,43 +786,7 @@
             </div>
         </div>
 
-        <!-- raw HTML omitted -->
-        <!-- <h2 id="available-plans">Available Plans</h2>
-<table class="center bg-black-90 peacemakr_price_table" width=550px>
-
-    <tr>
-        <td width=50%><font class="peacemakr_gold">Business</font></td>
-        <td width=50%><font class="peacemakr_gold">Enterprise</font></td>
-    </tr>
-    <tr>
-        <td valign="top"><ul class="features_ul">
-<li>12,000 keys delivered</li>
-<li>Admin Control Panel</li>
-<li>Unlimited Integrations</li>
-<li>Unlimited Risk Domains</li>
-<li>Email Support</li>
-            </ul></td>
-        <td valign="top"><ul class="features_ul">
-<li>All Business Features</li>
-<li>Migration from Business to Enterprise</li>
-<li>Dedicated Key Ownership</li>
-<li>Dedicated SaaS</li>
-<li>24/7 Support</li>
-            </ul></td>
-    </tr>
-    <tr>
-        <td><font class="peacemakr_gold">Contact Us</font></td>
-        <td><font class="peacemakr_gold">Contact Us</font></td>
-    </tr>
-        <tr>
-        
-        <td><form action="https://admin.peacemakr.io" method="GET"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="button" value="Sign Up Now" border=0 height=40 onclick="location.href='https://admin.peacemakr.io'"></form></td>
-
-        <td><form action="mailto:sales@peacemakr.io"><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_action_button" border=0 type="button" value="Request Quote" border=0 height=40 onclick="location.href='mailto:sales@peacemakr.io'"></form></td>
-    </tr>
-</table>
-<hr> -->
-
+        <!-- Pricing block -->
         <div class="bg-gray-900">
             <div class="pt-12 sm:pt-16 lg:pt-24">
                 <div class="max-w-7xl mx-auto text-center px-4 sm:px-6 lg:px-8">
@@ -1070,22 +1016,7 @@
             </div>
         </div>
 
-        <!-- <h2 id="learn-more">Learn More</h2>
-<h3 id="what-is-your-greatest-data-security-challenge">What is <em>your</em> greatest data security challenge?</h3> -->
-        <!-- raw HTML omitted -->
-        <!-- <h4><form action="https://formspree.io/mpzpvjrq" method="POST" class="w-100">
-<label align="left" class="peacemakr_dark">Your Name:
-<input class="w-100 peacemakr_gold peacemakr_dark_background peacemakr_small_action" type="text" name="name"></label>
-<label class="peacemakr_dark"> Your Email:
-<input class="w-100 peacemakr_gold peacemakr_dark_background peacemakr_small_action" type="email" name="_replyto"></label>
-<label class="peacemakr_dark"> Message:
-<textarea class="w-100 peacemakr_gold peacemakr_dark_background peacemakr_small_action" name="message" rows=5></textarea>
-</label><input class="w-100 peacemakr_light peacemakr_dark_background peacemakr-hover peacemakr_small_action" border=0 type="submit" value="Request More Info" height=40>
-</form>
-</h4>
-
-  </article> -->
-        <!-- Contact form -->
+        <!-- Learn More block -->
         <div class="bg-white py-16 px-4 overflow-hidden sm:px-6 lg:px-8 lg:py-24">
             <div class="relative max-w-xl mx-auto">
                 <svg class="absolute left-full transform translate-x-1/2" width="404" height="404" fill="none"
@@ -1117,7 +1048,7 @@
                     </p>
                 </div>
                 <div class="mt-12">
-                    <form action="#" method="POST" class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
+                    <form action="https://formspree.io/mpzpvjrq" method="POST" class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
                         <div>
                             <label for="first_name" class="block text-sm font-medium text-gray-700">First name</label>
                             <div class="mt-1">
@@ -1157,56 +1088,6 @@
             </div>
         </div>
     </main>
-
-    <!-- <footer class="peacemakr_dark_background bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://peacemakr.io" >
-    &copy;  Peacemakr 2020 
-  </a>
-    <div>
-
-
-
-
-<a href="https://twitter.com/peacemakr4" target="_blank" class="link-transition twitter link dib z-999 pt3 pt0-l mr1" title="Twitter link" rel="noopener" aria-label="follow on Twitter——Opens in a new window">
-  <svg height="32px"  style="enable-background:new 0 0 67 67;" version="1.1" viewBox="0 0 67 67" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M37.167,22.283c-2.619,0.953-4.274,3.411-4.086,6.101  l0.063,1.038l-1.048-0.127c-3.813-0.487-7.145-2.139-9.974-4.915l-1.383-1.377l-0.356,1.017c-0.754,2.267-0.272,4.661,1.299,6.271  c0.838,0.89,0.649,1.017-0.796,0.487c-0.503-0.169-0.943-0.296-0.985-0.233c-0.146,0.149,0.356,2.076,0.754,2.839  c0.545,1.06,1.655,2.097,2.871,2.712l1.027,0.487l-1.215,0.021c-1.173,0-1.215,0.021-1.089,0.467  c0.419,1.377,2.074,2.839,3.918,3.475l1.299,0.444l-1.131,0.678c-1.676,0.976-3.646,1.526-5.616,1.568  C19.775,43.256,19,43.341,19,43.405c0,0.211,2.557,1.397,4.044,1.864c4.463,1.377,9.765,0.783,13.746-1.568  c2.829-1.673,5.657-5,6.978-8.221c0.713-1.716,1.425-4.851,1.425-6.354c0-0.975,0.063-1.102,1.236-2.267  c0.692-0.678,1.341-1.419,1.467-1.631c0.21-0.403,0.188-0.403-0.88-0.043c-1.781,0.636-2.033,0.551-1.152-0.402  c0.649-0.678,1.425-1.907,1.425-2.267c0-0.063-0.314,0.042-0.671,0.233c-0.377,0.212-1.215,0.53-1.844,0.72l-1.131,0.361l-1.027-0.7  c-0.566-0.381-1.361-0.805-1.781-0.932C39.766,21.902,38.131,21.944,37.167,22.283z M33,64C16.432,64,3,50.569,3,34S16.432,4,33,4  s30,13.431,30,30S49.568,64,33,64z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/></svg>
-
-<span class="new-window"><svg  height="8px"  style="enable-background:new 0 0 1000 1000;" version="1.1" viewBox="0 0 1000 1000" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
-<path d="M598 128h298v298h-86v-152l-418 418-60-60 418-418h-152v-86zM810 810v-298h86v298c0 46-40 86-86 86h-596c-48 0-86-40-86-86v-596c0-46 38-86 86-86h298v86h-298v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/>
-</svg>
-</span></a>
-
-
-
-
-<a href="https://www.linkedin.com/company/peacemakr-io" target="_blank" class="link-transition linkedin link dib z-999 pt3 pt0-l mr1" title="LinkedIn link" rel="noopener" aria-label="follow on LinkedIn——Opens in a new window">
-  <svg  height="32px"  style="enable-background:new 0 0 65 65;" version="1.1" viewBox="0 0 65 65" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <path d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/>
-</svg>
-
-<span class="new-window"><svg  height="8px"  style="enable-background:new 0 0 1000 1000;" version="1.1" viewBox="0 0 1000 1000" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
-<path d="M598 128h298v298h-86v-152l-418 418-60-60 418-418h-152v-86zM810 810v-298h86v298c0 46-40 86-86 86h-596c-48 0-86-40-86-86v-596c0-46 38-86 86-86h298v86h-298v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/>
-</svg>
-</span></a>
-
-
-<a href="https://github.com/peacemakr-io" target="_blank" class="link-transition github link dib z-999 pt3 pt0-l mr1" title="Github link" rel="noopener" aria-label="follow on Github——Opens in a new window">
-  <svg  height="32px"  style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
-  <path d="M256,32C132.3,32,32,134.8,32,261.7c0,101.5,64.2,187.5,153.2,217.9c11.2,2.1,15.3-5,15.3-11.1   c0-5.5-0.2-19.9-0.3-39.1c-62.3,13.9-75.5-30.8-75.5-30.8c-10.2-26.5-24.9-33.6-24.9-33.6c-20.3-14.3,1.5-14,1.5-14   c22.5,1.6,34.3,23.7,34.3,23.7c20,35.1,52.4,25,65.2,19.1c2-14.8,7.8-25,14.2-30.7c-49.7-5.8-102-25.5-102-113.5   c0-25.1,8.7-45.6,23-61.6c-2.3-5.8-10-29.2,2.2-60.8c0,0,18.8-6.2,61.6,23.5c17.9-5.1,37-7.6,56.1-7.7c19,0.1,38.2,2.6,56.1,7.7   c42.8-29.7,61.5-23.5,61.5-23.5c12.2,31.6,4.5,55,2.2,60.8c14.3,16.1,23,36.6,23,61.6c0,88.2-52.4,107.6-102.3,113.3   c8,7.1,15.2,21.1,15.2,42.5c0,30.7-0.3,55.5-0.3,63c0,6.1,4,13.3,15.4,11C415.9,449.1,480,363.1,480,261.7   C480,134.8,379.7,32,256,32z"/>
-</svg>
-
-<span class="new-window"><svg  height="8px"  style="enable-background:new 0 0 1000 1000;" version="1.1" viewBox="0 0 1000 1000" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
-<path d="M598 128h298v298h-86v-152l-418 418-60-60 418-418h-152v-86zM810 810v-298h86v298c0 46-40 86-86 86h-596c-48 0-86-40-86-86v-596c0-46 38-86 86-86h298v86h-298v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/>
-</svg>
-</span></a>
-
-
-
-
-
-</div>
-  </div>
-</footer> -->
 
     <footer class="bg-gray-900">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
