- updated main page text - updated ico

--- a/src/media.html
+++ b/src/media.html
@@ -89,8 +89,8 @@
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         <div>
-                            <img class="h-8 w-auto"
-                                 src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
+                            <img class="h-6 w-auto"
+                                 src="./images/p_logo.png" alt="">
                         </div>
                         <div class="-mr-2">
                             <button type="button"
