--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,8 @@
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         <div>
-                            <img class="h-8 w-auto"
-                                 src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
+                            <img class="h-6 w-auto"
+                                 src="./images/p_logo.png" alt="">
                         </div>
                         <div class="-mr-2">
                             <button type="button"
@@ -131,12 +131,11 @@
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Peacemakr <br/></span>
-                        <span class="block text-indigo-600 xl:inline">Secure Data & Collaboration Platform</span>
+                        <span class="block text-indigo-600 xl:inline">Secure Data & Collaboration</span>
                     </h1>
                     <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        That solves all the challenges of data security with on-prem, private-cloud, and hybrid root
-                        of trusts that reduces costs and time-to-market.
+                        Drop-in E2E-Encryption and Bring-Your-Own-Key solutions for SaaS providers who require strong and specific data-security mechanisms to enable customers to take advantage of multi-tenant SaaS offerings
                     </p>
                 </div>
             </main>
@@ -155,8 +154,8 @@
         <div
                 class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <span class="block">Does Your B2B SaaS need Bring-Your-Own-Key E2E-Encryption to enable customers to take advantage of multi-tenant SaaS offerings?</span>
-                <span class="block text-indigo-600">We have you covered.</span>
+                <span class="block">Invite self-hosted customers back to the cloud</span>
+                <span class="block text-indigo-600">We have you covered</span>
             </h2>
             <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
                 <div class="inline-flex rounded-md shadow">
@@ -173,7 +172,7 @@
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure Data</h2>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Turnkey Solutions</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform has integrated with
                     several open-source projects to provide turnkey Data Security solutions.</p>
@@ -274,9 +273,8 @@
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure Data</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">On-Prem, Private-Cloud, SaaS, or Hybrid Root
-                    of Trust</p>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Trustworthy</h2>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">Bring-Your-Own-Keys</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr Secure Data Platform enables you and your customers
                     to decide the right threat model for yourselves. And when your requirements change, migrate your
                     root of trust - never disrupting your service. With our key lifecycle management.</p>
@@ -349,7 +347,7 @@
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure Data</h2>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Headache Free</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Correctly the First Time</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr provides full data secure, to meet even the most
                     rigorous threat models. These include.</p>
@@ -366,7 +364,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Data Privacy (with encryption)
+                                Data Privacy
                             </dt>
                         </div>
                     </div>
@@ -380,7 +378,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Non-Repudiation (with signing)
+                                Non-Repudiation
                             </dt>
                         </div>
                     </div>
@@ -394,7 +392,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Forward Secrecy (with automated key rotation)
+                                Forward Secrecy
                             </dt>
                         </div>
                     </div>
@@ -409,7 +407,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Tamper-Detection (with HMACs)
+                                Tamper-Detection
                             </dt>
                         </div>
                     </div>
@@ -423,7 +421,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Cryptoagility (through open source SDKs)
+                                Cryptoagility
                             </dt>
                         </div>
                     </div>
@@ -437,7 +435,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Centralized control of all clients (in an admin portal)
+                                Centralized configuration
                             </dt>
                         </div>
                     </div>
@@ -465,7 +463,7 @@
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure Data</h2>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Execute</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Faster</p>
                 <p class="mt-4 text-lg text-gray-500">Integrate Peacemakr to goto Market securely, today. Migrate to
                     different threat models tomorrow.</p>
@@ -543,7 +541,7 @@
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure Data</h2>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Consistent</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Everywhere</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform abstracts away all the
                     hard problems behind a simple interface, so that you can quickly secure data everywhere.</p>
@@ -659,8 +657,8 @@
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure Data</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">For Compliance</p>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Easy</h2>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">Compliance</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr melts away sales barriers in SMB or Enterprise
                     markets, by helping you acheive strict compliance with regulators.</p>
             </div>
@@ -675,7 +673,7 @@
                                   d="M5 13l4 4L19 7"/>
                         </svg>
                         <div class="ml-3">
-                            <dt class="text-lg leading-6 font-medium text-gray-900">
+                            <dt class="text-lg leading-6 font-medium text-gray-900">Securely share data with intended participants seamlessly,
                                 GDPR (General Data Protection Regulation)
                             </dt>
                         </div>
@@ -760,14 +758,12 @@
     <!-- Secure block -->
     <div class="relative bg-white py-16 sm:py-24 lg:py-32 overflow-hidden">
         <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
-            <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Secure Data</h2>
+            <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Connected</h2>
             <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
                 Secure Collaborations
             </p>
             <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-                Securely share data with intended participants seamlessly, even across different organizations.
-                Forget &ldquo;bring-your-own-keys,&rdquo; invite your collaborators to bring-your-own-threat-model
-                (and their keys).
+                Securely share data with intended participants seamlessly.
             </p>
         </div>
     </div>
@@ -775,7 +771,7 @@
     <!-- At scale block -->
     <div class="relative bg-gray-50 py-16 sm:py-24 lg:py-32">
         <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
-            <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Secure Data</h2>
+            <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Effective</h2>
             <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
                 At Scale
             </p>
@@ -798,7 +794,7 @@
                         The right price for you, whoever you are
                     </p>
                     <p class="text-xl text-gray-300">
-                        To learn more don't hesitate to contact us.
+                        To learn more contact us
                     </p>
                 </div>
             </div>
@@ -1041,7 +1037,7 @@
             </svg>
             <div class="text-center">
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                    Learn More
+                    Tell us
                 </h2>
                 <p class="mt-4 text-lg leading-6 text-gray-500">
                     What is your greatest data security challenge?
