--- a/src/index.html
+++ b/src/index.html
@@ -348,7 +348,7 @@
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Headache Free</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">Correctly the First Time</p>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">Correct the First Time</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr provides full data secure, to meet even the most
                     rigorous threat models. These include.</p>
             </div>
@@ -791,7 +791,7 @@
                         Pricing
                     </h2>
                     <p class="text-3xl font-extrabold text-white sm:text-4xl lg:text-5xl">
-                        The right price for you, whoever you are
+                        Available plans
                     </p>
                     <p class="text-xl text-gray-300">
                         To learn more contact us
