--- a/src/about_us.html
+++ b/src/about_us.html
@@ -215,7 +215,8 @@
 <footer class="bg-gray-900">
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
         <div class="flex justify-center space-x-6 md:order-2">
-            <a href="#" class="text-gray-400 hover:text-gray-500">
+            <a href="https://www.linkedin.com/company/peacemakr-io" target="_blank"
+               class="text-gray-400 hover:text-gray-500">
                 <span class="sr-only">Linked</span>
                 <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 65 65" aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -224,7 +225,7 @@
                 </svg>
             </a>
 
-            <a href="#" class="text-gray-400 hover:text-gray-500">
+            <a href="https://twitter.com/peacemakr4" target="_blank" class="text-gray-400 hover:text-gray-500">
                 <span class="sr-only">Twitter</span>
                 <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path
@@ -232,7 +233,7 @@
                 </svg>
             </a>
 
-            <a href="#" class="text-gray-400 hover:text-gray-500">
+            <a href="https://github.com/peacemakr-io" target="_blank" class="text-gray-400 hover:text-gray-500">
                 <span class="sr-only">GitHub</span>
                 <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path fill-rule="evenodd"
