--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
                             <div class="-mr-2 flex items-center md:hidden">
                                 <button type="button"
                                         class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                                        onclick="toggle()"
                                         id="main-menu" aria-haspopup="true">
                                     <span class="sr-only">Open main menu</span>
                                     <!-- Heroicon name: menu -->
@@ -54,6 +55,10 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                               d="M4 6h16M4 12h16M4 18h16"/>
                                     </svg>
+                                    <script>
+                                        const mainmenu = document.getElementById('menu');
+                                        const show = () => mainmenu.classList.toggle("show");
+                                    </script>
                                 </button>
                             </div>
                         </div>
@@ -81,7 +86,8 @@
         From: "opacity-100 scale-100"
         To: "opacity-0 scale-95"
     -->
-            <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
+
+            <div id="menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         <div>
@@ -90,7 +96,8 @@
                         </div>
                         <div class="-mr-2">
                             <button type="button"
-                                    class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                                    class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                                    onclick="toggle()">
                                 <span class="sr-only">Close main menu</span>
                                 <!-- Heroicon name: x -->
                                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -98,25 +105,29 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                           d="M6 18L18 6M6 6l12 12"/>
                                 </svg>
+                                <script>
+                                    const menu = document.getElementById('menu');
+                                    const toggle = () => menu.classList.toggle("hidden");
+                                </script>
                             </button>
                         </div>
                     </div>
                     <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
                         <div class="px-2 pt-2 pb-3 space-y-1" role="none">
-                            <a href="#"
+                            <a href="/"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
                                role="menuitem">Home</a>
 
-                            <a href="#"
+                            <a href="media.html"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
                                role="menuitem">Media</a>
 
-                            <a href="#"
+                            <a href="about_us.html"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
                                role="menuitem">About Us</a>
                         </div>
                         <div role="none">
-                            <a href="#"
+                            <a href="https://admin.peacemakr.io/#/login"
                                class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100"
                                role="menuitem">
                                 Log in
@@ -135,7 +146,9 @@
                     </h1>
                     <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Drop-in E2E-Encryption and Bring-Your-Own-Key solutions for SaaS providers who require strong and specific data-security mechanisms to enable customers to take advantage of multi-tenant SaaS offerings
+                        Drop-in E2E-Encryption and Bring-Your-Own-Key solutions for SaaS providers who require strong
+                        and specific data-security mechanisms to enable customers to take advantage of multi-tenant SaaS
+                        offerings
                     </p>
                 </div>
             </main>
@@ -673,7 +686,8 @@
                                   d="M5 13l4 4L19 7"/>
                         </svg>
                         <div class="ml-3">
-                            <dt class="text-lg leading-6 font-medium text-gray-900">Securely share data with intended participants seamlessly,
+                            <dt class="text-lg leading-6 font-medium text-gray-900">Securely share data with intended
+                                participants seamlessly,
                                 GDPR (General Data Protection Regulation)
                             </dt>
                         </div>
