fix navbar in mobile version: - navbar is hidden by default

--- a/src/about_us.html
+++ b/src/about_us.html
@@ -91,7 +91,7 @@
         To: "opacity-0 scale-95"
     -->
 
-            <div id="menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
+            <div id="menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         <div>
