navbar logic moved to navbar.js

--- a/src/about_us.html
+++ b/src/about_us.html
@@ -25,6 +25,7 @@
     <meta name="twitter:title" content="Peacemakr"/>
     <meta name="twitter:description"
           content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+    <script src="navbar.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -60,15 +61,6 @@
                                               d="M4 6h16M4 12h16M4 18h16"/>
                                     </svg>
                                 </button>
-                                <script>
-                                    export function navToggle() {
-                                        let btn = document.getElementById('main-menu');
-                                        let nav = document.getElementById('menu');
-
-                                        btn.classList.toggle('open');
-                                        nav.classList.toggle('hidden');
-                                    }
-                                </script>
                             </div>
                         </div>
                     </div>
