update text on the main page

--- a/src/index.html
+++ b/src/index.html
@@ -282,8 +282,8 @@
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Trustworthy</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Bring-Your-Own-Keys</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr Secure Data Platform enables you and your customers
-                    to decide the right threat model for yourselves. And when your requirements change, migrate your
-                    root of trust - never disrupting your service. With our key lifecycle management.</p>
+                    to make the right decision on the threat model.
+                </p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -297,7 +297,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Invite your customers to determine where their root of trust resides.
+                                Invite your customers to determine where their root of trust resides
                             </dt>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Start in the cloud today, migrate to on-prem later.
+                                Start in the cloud today, migrate to on-prem later
                             </dt>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Migrate anytime, in self-service admin portal.
+                                Migrate anytime, in self-service admin portal
                             </dt>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Say goodbye to HSM and SGX headaches on-prem.
+                                Say goodbye to HSM and SGX headaches on-prem
                             </dt>
                         </div>
                     </div>
@@ -355,7 +355,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Headache Free</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Correct the First Time</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr provides full data secure, to meet even the most
+                <p class="mt-4 text-lg text-gray-500">Peacemakr provides the full and granular control over your data, to meet even the most
                     rigorous threat models. These include.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
@@ -649,7 +649,10 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data JavaScript SDK (Coming Soon)
+                                Secure Data
+                                <p>
+                                    JavaScript SDK (Coming Soon)
+                                </p>
                             </dt>
                         </div>
                     </div>
@@ -666,7 +669,7 @@
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Easy</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Compliance</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr melts away sales barriers in SMB or Enterprise
-                    markets, by helping you acheive strict compliance with regulators.</p>
+                    markets, by helping you achieve strict compliance with regulators.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
